--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,10 @@
         android:paddingTop="12dp"
         android:paddingBottom="16dp"
         android:paddingLeft="10dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -27,6 +31,8 @@
         android:id="@+id/quantity_text_view"
         android:paddingBottom="16sp"
         android:paddingLeft="10dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
         android:textSize="16sp"
         android:textColor="@android:color/black"/>
     <Button
@@ -34,6 +40,9 @@
         android:layout_height="48dp"
         android:text="-"
         android:onClick="decrement"/>
+
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
